Modificaciones en PAdrinos, gestion de donativos con colboradores

--- a/WebContent/views/desktop/datos/parametros/frecuenciaAporte/FrecuenciaAporteFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/frecuenciaAporte/FrecuenciaAporteFormBasic.zul
@@ -13,7 +13,8 @@
 						value="@bind(vm.frecuenciaAporte.nombre)">
 					</textbox>
 				</div>
-				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_nombre, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_nombre, position=after_end" />
 			</div>
 
 			<div sclass="col s12">
@@ -22,14 +23,15 @@
 						Unidad de medida
 					</n:label>
 					<combobox id="fk_unidad_medida" readonly="true"
-						model="@bind(vm.unidadMedidas)"
-						selectedItem="@bind(vm.frecuenciaAporte.fkUnidadMedida)">
+						model="@bind(vm.unidadFrecuenciaAporteEnums)"
+						selectedItem="@bind(vm.unidadFrecuenciaAporteEnum)">
 						<template name="model">
-							<comboitem label="@load(each.nombre)" />
+							<comboitem label="@load(each.toString())" />
 						</template>
 					</combobox>
 				</div>
-				<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_unidad, position=after_end"/>
+				<span sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_unidad, position=after_end" />
 			</div>
 
 			<div class="col s12">
@@ -42,33 +44,47 @@
 						value="@bind(vm.frecuenciaAporte.frecuencia)">
 					</spinner>
 				</div>
-				<span style="padding-left:30px" sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_frecuencia, position=after_end"/>
+				<span style="padding-left:30px"
+					sclass="fa fa-question-circle fa-lg help-icon"
+					tooltip="pop_frecuencia, position=after_end" />
 			</div>
-			
+
 		</div>
 
 
 		<popup id="pop_nombre" width="200px">
 			<html>
+
+				
 				<![CDATA[ Por favor, indique un nombre que represente el
 				aporte que desea registrar.<br /><font
-				color="#3b85a1">Ejemplo: Económico.</font> ]]>
+				color="#3b85a1">Ejemplo: Trimestral.</font> ]]>
+				
+				
 			</html>
 		</popup>
 
 		<popup id="pop_unidad" width="200px">
 			<html>
+
+				
 				<![CDATA[ Por favor, indique la unidad de medida que
 				desea usar para el aporte que desea registrar.<br
-				/><font color="#3b85a1">Ejemplo:Meses.</font> ]]>
+				/><font color="#3b85a1">Ejemplo:Mes.</font> ]]>
+				
+				
 			</html>
 		</popup>
 
 		<popup id="pop_frecuencia" width="200px">
 			<html>
+
+				
 				<![CDATA[ Por favor, indique la frecuencia que desea
 				usar para el aporte que desea registrar.<br /><font
-				color="#3b85a1">Ejemplo:Trimestral.</font> ]]>
+				color="#3b85a1">Ejemplo:3.</font> ]]>
+				
+				
 			</html>
 		</popup>
 
