--- a/WebContent/assets/css/components-jarvis.css
+++ b/WebContent/assets/css/components-jarvis.css
@@ -691,8 +691,18 @@ nav-list.z-navbar>ul>.z-nav-open>a i,.nav-list.z-navbar>ul>.z-nav-open>a span
 }
 
 .container_reporte {
-    background: #FFFFFF;
-    padding: 12px 4px;
-    border: 3px solid #8AC7DE;
-    margin-bottom: 20px;
+	background: #FFFFFF;
+	padding: 12px 4px;
+	border: 3px solid #8AC7DE;
+	margin-bottom: 20px;
+}
+
+.z-auxheader-content,.z-auxheader-content:hover {
+	background: #594e46 !important;
+	border-right: none;
+	height: 41px;
+}
+
+.z-auxhead:hover .z-auxheader-content {
+	background: #594e46 !important;
 }
