--- a/WebContent/views/desktop/gestion/donativo/registro/selectPadrino.zul
+++ b/WebContent/views/desktop/gestion/donativo/registro/selectPadrino.zul
@@ -15,13 +15,17 @@
 			<div class="row">
 				<div class="col s12">
 					<div class="col s12">
-						<listbox model="@load(vm.objectsList)"
-							selectedItem="@bind(vm.selectedObject)">
+						<listbox model="@load(vm.padrinos)"
+							emptyMessage="No hay padrinos para mostrar"
+							selectedItem="@bind(vm.padrino)">
 
 							<listhead sizable="true">
-								<listheader width="30%"
+								<listheader width="15%"
 									label="Identificación" />
-								<listheader width="80%" label="Padrino" />
+								<listheader width="25%" label="Padrino" />
+								<listheader width="20%"
+									label="Frecuencia de aporte" />
+								<listheader width="20%" label="Monto" />
 							</listhead>
 							<template name="model">
 								<listitem>
@@ -33,7 +37,6 @@
 									<listcell
 										label="@load(each.fkFrecuenciaAporte.nombre)" />
 									<listcell label="@load(each.monto)" />
-
 								</listitem>
 							</template>
 						</listbox>
