--- a/WebContent/views/desktop/gestion/donativo/registro/selectPatrocinador.zul
+++ b/WebContent/views/desktop/gestion/donativo/registro/selectPatrocinador.zul
@@ -4,31 +4,34 @@
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
 				<label
-					value="Seleccione el Padrino del que provino el Donativo"
+					value="Seleccione el Patrocinador del que provino el Donativo"
 					sclass="label-medium-500">
 				</label>
 			</div>
-
 		</div>
 		<div width="100%">
 			<div class="row">
 				<div class="col s12">
 					<div class="col s12">
 						<listbox model="@load(vm.patrocinadores)"
+							emptyMessage="No hay Patrocinadores a mostrar"
 							selectedItem="@bind(vm.patrocinador)">
 							<listhead sizable="true">
 								<listheader width="20%"
+									label="Tipo de Persona" />
+								<listheader width="30%"
 									label="Identificación" />
-								<listheader width="80%"
+								<listheader width="50%"
 									label="Patrocinador" />
 							</listhead>
 							<template name="model">
 								<listitem>
 									<listcell
-										label="@load(each.fkPersona.identificacion)" />
-									</listcell>
+										label="@load(each.fkPersona.tipoPersonaEnum.toString())" />
 									<listcell
-										label="@load(each.fkPersona.nombre)" />
+										label="@load(each.fkPersona.identificacion)" />
+									<listcell
+										label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
 								</listitem>
 							</template>
 						</listbox>
