modificacion de planificación y ejecución de evento

--- a/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/catalogoMotivo.zul
+++ b/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/catalogoMotivo.zul
@@ -3,28 +3,24 @@
 	<window width="80%" sclass="window-dialog" action="show: slideIn;hide: slideOut"
 		use="karen.core.dialog.catalogue.list_pagination.controllers.C_ListPaginationCatalogueDialog"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.evento.planificaion.tarea.participantes.viewmodels.VM_CatalogoParticipantes', dialogData=arg.get('dialogData'))">
-		<caption label="INDICADORES" style="margin-left: 40%;"/>
+		viewModel="@id('vm') @init('ve.smile.gestion.evento.ejecucion.evaluarTarea.viewmodels.VM_CatalogoMotivo', dialogData=arg.get('dialogData'))">
+		<caption label="MOTIVOS" style="margin-left: 40%;"/>
 		<separator height="20px"></separator>
-		<n:h6 style="margin-left: 5%;">Por favor seleccione los participantes:</n:h6>
+		<n:h6 style="margin-left: 5%;">Por favor seleccione un motivo:</n:h6>
 		<separator height="20px"></separator>
 		<listbox id="listbox" model="@load(vm.objectList)"
-			selectedItem="@bind(vm.selectedObject)" style="width: 90%; margin-left: 5%;padding-bottom: 5%;" multiple="true" checkmark="true">
+			selectedItem="@bind(vm.selectedObject)" style="width: 90%; margin-left: 5%;padding-bottom: 5%;">
 
 			<listhead sizable="true">
-				<listheader width="5%" label="" />
-				<listheader width="20%" label="identificación" />
-				<listheader width="25%" label="Nombre" />
-				<listheader width="25%" label="Apellido" />
-				<listheader width="25%" label="Ciudad" />				
+				<listheader label="Nombre" />
+				<listheader label="Descripcion" />
+				<listheader label="Clasificación" />				
 			</listhead>
 			<template name="model">
 				<listitem>
-					<listcell label="" />
-					<listcell label="@load(each.identificacion)" />
 					<listcell label="@load(each.nombre)" />
-					<listcell label="@load(each.apellido)" />
-					<listcell label="@load(each.fkCiudad.nombre)" />				
+					<listcell label="@load(each.descripcion)" />
+					<listcell label="@load(each.fkClasificadorMotivo.nombre)" />					
 				</listitem>
 			</template>
 			<listfoot>
