--- a/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/evaluarTareaEventoPlanificado.zul
+++ b/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/evaluarTareaEventoPlanificado.zul
@@ -23,43 +23,51 @@
 
 				<listbox height="300px"
 					emptyMessage="No hay tareas asociados al evento."
-					model="@bind(vm.eventoPlanificadotareas)">
+					model="@load(vm.eventoPlanificadotareas)" >
 					<listhead sizable="true">
-						<listheader width="25%" label="Tarea" />
-						<listheader width="30%" label="Fecha Planificada" />
-						<listheader width="36%" label="Lugar" align="center" />
-						<listheader width="9%" label="" align="right" />
+						<listheader width="12%" label="Ejecutada" />
+						<listheader width="25%" label="Tarea" />						
+						<listheader width="20%" label="Fecha Planificada" />
+						<listheader width="20%" label="Fecha Ejecución" align="center" />
+						<listheader width="30%" label="Motivo" align="center" />
+						<listheader width="8%" label="" align="right" />
 					</listhead>
 					<template name="model">
 						<listitem>
+						<listcell
+								>
+								<checkbox label="SI"></checkbox>
+							</listcell>
 							<listcell
 								label="@load(each.fkTarea.nombre)">
 							</listcell>
 							<listcell>
 								<datebox format="dd/MM/yyyy"
-									value="@bind(each.fechaPlanificadaDate)">
+									value="@bind(each.fechaPlanificadaDate)" disabled="true">
 								</datebox>
 							</listcell>
-
+								
+							<listcell>	
+							<datebox format="dd/MM/yyyy"
+									value="@bind(each.fechaEjecutadaDate)">
+								</datebox>							
+							</listcell>								
 							<listcell>
-
 								<label
-									value="@bind(each.fkDirectorio.nombre)">
+									value="@bind(each.fkMotivo.nombre)">
 								</label>
 								<label visible="empty each.fkDirectorio"
 									value="Lugar sin asignar">
 								</label>
-								</listcell>
-								<listcell>
+							</listcell>
+							<listcell>
 								<button
 									sclass="teal lighten-1 waves-effect waves-light"
-									onClick="@command('buscarDirectorio', index=forEachStatus.index)"
+									onClick="@command('buscarMotivo', index=forEachStatus.index)"
 									iconSclass="fa fa-search" tooltiptext="Editar Lugar"
 									style="/padding: 5px 6px; background-color: #2AA4EF !important; float: right">
 								</button>
-								</listcell>
-
-							
+								</listcell>							
 						</listitem>
 					</template>
 				</listbox>
