--- a/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/evaluarTareasIndex.zul
+++ b/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/evaluarTareasIndex.zul
@@ -2,7 +2,7 @@
 	<div class="wizard ${arg.animation_}"
 		use="karen.core.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.evento.planificaion.registro.viewmodels.VM_EventoPlanificadoRegistroIndex')">
+		viewModel="@id('vm') @init('ve.smile.gestion.evento.ejecucion.evaluarTarea.viewmodels.EvaluarTareaIndex')">
 		<div class="row">
 			<div id="ulHeaderWizard"
 				use="karen.core.wizard.buttons.containers.UlHeaderWizard">
