--- a/WebContent/views/desktop/gestion/evento/ejecucion/registrarResultado/resultadoIndicadoresTareasIndex.zul
+++ b/WebContent/views/desktop/gestion/evento/ejecucion/registrarResultado/resultadoIndicadoresTareasIndex.zul
@@ -2,7 +2,7 @@
 	<div class="wizard ${arg.animation_}"
 		use="karen.core.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.evento.planificaion.registro.viewmodels.VM_EventoPlanificadoRegistroIndex')">
+		viewModel="@id('vm') @init('ve.smile.gestion.evento.ejecucion.registroResultado.viewmodels.VM_RegistroResultadoEventoPlanificado')">
 		<div class="row">
 			<div id="ulHeaderWizard"
 				use="karen.core.wizard.buttons.containers.UlHeaderWizard">
