--- a/WebContent/views/desktop/gestion/evento/planificacion/indicadores/editIndicadoresEventoPlanificado.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/indicadores/editIndicadoresEventoPlanificado.zul
@@ -35,7 +35,7 @@
 							<listcell>
 								<intbox
 									style="    height: 1em; border: 1px solid #999999; border-radius: 7px; font-size:1.2em;  text-align: center;"
-									value="@load(each.valorEsperado)">
+									value="@bind(each.valorEsperado)">
 								</intbox>
 							</listcell>
 						</listitem>
