--- a/WebContent/views/desktop/datos/parametros/valores/ValoresFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/valores/ValoresFormBasic.zul
@@ -8,7 +8,7 @@
 
 		<div class="row">
 
-			<div class="col s12">
+			<div class="row">
 				<div class="input-field offset-s2 col s8">
 					<n:label for="nombre">Nombre</n:label>
 					<textbox id="nombre" type="text" maxlength="100"
@@ -18,11 +18,11 @@
 			</div>
 
 			<div class="row" align="center">
-				<div class="col s12">
-					<div class="input-field col s12">
-						<uploadImageSingle maxsize="9000" size="200"
-							idUpload="1" title="Imagen del valor" />
-					</div>
+				<div class="col s12" align="center">
+
+					<uploadImageSingle maxsize="9000" size="200"
+						idUpload="1" title="Imagen del valor" />
+
 				</div>
 			</div>
 
