--- a/WebContent/assets/css/web/decargaAppMovil.css
+++ b/WebContent/assets/css/web/decargaAppMovil.css
@@ -82,3 +82,72 @@ table.fc-border-separate>thead>tr>th {
 .bajar{
 	padding-bottom: 20px;
 }
+
+
+		
+/* estilos para seccion slider_noticias */
+
+	#noticias h4 {
+		background: #d9eb52;;
+		color: #a0958e;
+		margin: 0;
+		padding: 15px 0;
+	}
+
+	#noticias .row {
+		margin-bottom: 0;
+	    padding: 10px 0 20px 0;
+	    background: #F0F2DC;
+	}
+	
+	#owlNoticias .item {
+		padding: 25px 62px 25px 10px;
+		margin: 5px;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
+		border-radius: 3px;
+		text-align: justify;
+	}
+	
+	#noticias #owlNoticias .item:hover{
+		cursor: pointer;
+	}
+	
+	#noticias #owlNoticias .item .title{
+		color: #f26b7a; 
+		font-weight: bold;
+	}
+	 
+	#owlNoticias .owl-theme .owl-controls .owl-buttons div {
+		padding: 5px 40px;
+	}
+	
+	#owlNoticias .owl-theme .owl-buttons span {
+		margin-top: 2px;
+	}
+	 
+	//To move navigation buttons outside use these settings:
+	 
+	#owlNoticias .owl-theme .owl-controls .owl-buttons div {
+	position: absolute;
+}
+
+#owlNoticias.owl-theme .owl-controls .owl-buttons .owl-prev {
+	left: -50px;
+	top: 60px;
+	position: absolute;
+}
+
+#owlNoticias.owl-theme .owl-controls .owl-buttons .owl-next {
+	right: -1px;
+	top: 60px;
+	position: absolute;
+}
+
+#owlNoticias.owl-carousel {
+	display: none;
+	position: relative;
+	-ms-touch-action: pan-y;
+		margin-left: 4%;/*nuevo*/
+
+}
