--- a/WebContent/views/desktop/datos/parametros/valores/ValoresFormBasic.zul
+++ b/WebContent/views/desktop/datos/parametros/valores/ValoresFormBasic.zul
@@ -1,6 +1,11 @@
 <?component name="uploadImageSingle" macroURI="/assets/theme/components/upload_image_single.zul"?>
 
 <zk xmlns:n="native" xmlns:w="client">
+	<style>
+		.center-transform-x { transform: inherit !important; left: auto
+		!important; } .center-transform-x.center-transform-y {
+		transform: translateX(200%) translateY(-57%) !important; }
+	</style>
 	<div width="80%" class="container ${arg.animation_}"
 		use="karen.core.form.controllers.C_WindowForm"
 		apply="org.zkoss.bind.BindComposer"
@@ -17,12 +22,12 @@
 				</div>
 			</div>
 
-			<div class="row" align="center">
-				<div class="col s12" align="center">
-
-					<uploadImageSingle maxsize="9000" size="200"
-						idUpload="1" title="Imagen del valor" />
-
+			<div class="row">
+				<div class="col s12">
+			 			<div class="input-field offset-s2 col s8">
+						<uploadImageSingle maxsize="9000" size="200"
+							idUpload="1" title="Imagen del Valor" />
+					</div>
 				</div>
 			</div>
 
