--- a/WebContent/views/desktop/datos/parametros/directorio/DirectorioIndex.zul
+++ b/WebContent/views/desktop/datos/parametros/directorio/DirectorioIndex.zul
@@ -8,7 +8,8 @@
 			<div class="col s12">
 				<div class="col s12">
 					<listbox id="listbox" model="@load(vm.objectsList)"
-						selectedItem="@bind(vm.selectedObject)">
+						selectedItem="@bind(vm.selectedObject)"
+						emptyMessage="No existen elementos para mostrar en la lista">
 
 						<listhead sizable="true">
 							<listheader width="20%" label="Nombre" />
