--- a/WebContent/views/web/calendario.zul
+++ b/WebContent/views/web/calendario.zul
@@ -42,72 +42,107 @@
 				<div class="col-md-6"
 					style="padding: 8px; background-color: #3B85A1 !important; padding-top: 0px;">
 					<n:div id='calendar'></n:div>
-				</div>
-				<div class="col-md-4"
-					style="background: white;border: 8px solid #3B85A1;padding: 0px !important; margin-left: 15px !important;">
-					<div align="center"
-						style="width: 100%; background-color: #d9eb52; margin-top: 0px !important; padding: 4px 0px !important">
-						<n:h6
-							style="color:#87796f; font-family: Roboto,sans-serif !important; font-weight: bold;">
-							Carrera 10K y Caminata 6K Fanca 2016
-						</n:h6>
-					</div>
-					<div sclass="row">
-						<div sclass="col s12">
-							<div sclass="col s6">
-								<n:br></n:br>
-								<div class="info">
-									<n:b>Fecha:</n:b>
-									02/05/2016
-									<n:br></n:br>
-									<n:b>Lugar:</n:b>
-									Centro Comercial Sambil
-									<n:br></n:br>
-									<n:b>Dirección:</n:b>
-									Carrera 23 entre calles 15 y 16
-									<n:br></n:br>
+				</div>	
+				
+				
+				
+							<!-- DESDE ACA TRABAJE CON EL DETALLE-->
+							<!-- DESDE ACA TRABAJE CON EL DETALLE-->
+							<!-- DESDE ACA TRABAJE CON EL DETALLE-->
+							
+							<div class="col-md-4"
+								style="background: white;border: 8px solid #3B85A1;padding: 0px !important; margin-left: 15px !important;">
+								<div apply="org.zkoss.bind.BindComposer"
+									viewModel="@id('vm') @init('ve.smile.web.viewmodels.evento.VM_Evento')">
+									<div align="center"
+										style="width: 100%; background-color: #d9eb52; margin-top: 0px !important; padding: 4px 0px !important">
+										<n:h6
+											style="color:#87796f; font-family: Roboto,sans-serif !important; font-weight: bold;">
+											<label
+												value="@load(vm.evento.fkEvento.nombre)">
+											</label>
+										</n:h6>
+									</div>
+									<div sclass="row">
+										<div sclass="col s12">
+											<div sclass="col s6">
+												<n:br></n:br>
+												<div class="info">
+													<n:b>Fecha:</n:b>
+												<label
+														value="@load(vm.fecha)">
+													</label>
+													<n:br></n:br>
+													<n:b>Lugar:</n:b>
+													<label
+														value="@load(vm.evento.fkDirectorio.nombre)">
+													</label>
+													<n:br></n:br>
+													<n:b>
+														Dirección:
+													</n:b>
+													<label
+														value="@load(vm.evento.fkDirectorio.direccion)">
+													</label>
+													<n:br></n:br>
+												</div>
+												<image
+													class="img-responsive center-block"
+													src="/imagenes/portal/icon/mapa.png"
+													style="width: auto;padding: 0px;margin: 0px;display: inline-block;">
+												</image>
+												<image
+													class="img-responsive center-block"
+													src="/imagenes/portal/icon/icon-magnifier.png"
+													style=" width: auto; margin: 0px; display: inline-block;vertical-align: bottom;">
+												</image>
+												<n:br></n:br>
+												<n:br></n:br>
+											</div>
+											<div sclass="col s6">
+												<n:br></n:br>
+												<image
+													class="img-responsive center-block" width="128px"
+													height="128px" src="@load(vm.evento.fkMultimedia.url)">
+												</image>
+												<n:br></n:br>
+											</div>
+										</div>
+										<div sclass="col s12"
+											align="justify">
+											<div sclass="row">
+												<label
+													value="@load(vm.evento.fkEvento.descripcion)">
+												</label>
+											</div>
+											<div visible="@load(vm.evento.botonAlbum eq true)">
+											<div
+												sclass="row center-align" 	apply="org.zkoss.bind.BindComposer"
+												viewModel="@id('vm') @init('ve.smile.web.viewmodels.albumes.VM_Album')"											
+												style="margin-bottom:0pc">
+												<button type="button" 
+													id="nEMQo3" onClick="@command('album' ,album=each)"
+													iconSclass="" class="indigo waves-effect waves-light btn"
+													style="background-color: #3B85A1 !important; ">
+													VER ÁLBUM
+												</button>
+											</div>
+											</div>
 
+										</div>
+									</div>
 								</div>
-								<image
-									class="img-responsive center-block"
-									src="/imagenes/portal/icon/mapa.png" style="width: auto;padding: 0px;margin: 0px;display: inline-block;">
-								</image>
-								<image
-									class="img-responsive center-block"
-									src="/imagenes/portal/icon/icon-magnifier.png" style=" width: auto; margin: 0px; display: inline-block;vertical-align: bottom;">
-								</image>
-								<n:br></n:br>
-								<n:br></n:br>
 							</div>
-							<div sclass="col s6">
-								<n:br></n:br>
-								<image
-									class="img-responsive center-block"
-									src="/imagenes/portal/icon/icon-bingo.png" width="128px"
-									height="128px">
-								</image>
-								<n:br></n:br>
-							</div>
-						</div>
-						<div sclass="col s12" align="justify">
-							<div sclass="row">
-								<label>
-									Las inscripciones serán a través de la página web mirunning.net y algunos puntos manuales como colegios y el Sambil. Estas iniciarán la primera semana de marzo y tendrán costos desde 700 a 900 bolívares, según las diferentes etapas de pago.
-
-En el evento se premiará primer, segundo y tercer lugar masculino y femenino con doce, diez, y ocho mil bolívares, respectivamente. Los ganadores de las ocho categorías, que van desde niños hasta adultos mayores de 65 años, recibirán un trofeo.
-								</label>
-							</div>
-							<div sclass="row center-align" style="margin-bottom:0pc">
-								<button type="button" id="nEMQo3" onClick="@command('album')"
-									iconSclass="" class="indigo waves-effect waves-light btn"
-									style="background-color: #3B85A1 !important; ">
-									VER ÁLBUM
-								</button>
-							</div>
-
-						</div>
-					</div>
-				</div>
+							
+		<!-- HASTA ACA TRABAJE CON EL DETALLE-->
+	<!-- HASTA ACA TRABAJE CON EL DETALLE-->	
+		<!-- HASTA ACA TRABAJE CON EL DETALLE-->		
+		
+				
+				
+				
+				
+				
 				<div class="col-md-1"></div>
 			</div>
 		</div>
